[package]

name = "swim"
version = "0.0.2"
authors = ["mhallin <mhallin@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mhallin/swim-rs"

[lib]
name = "swim"

[[bin]]
name = "swimmer"

[dependencies]
docopt = "*"
rustc-serialize = "*"
docopt_macros = "*"
uuid = "*"
time = "*"
rand = "*"
