[package]

name = "swim"
version = "0.0.3"
authors = ["mhallin <mhallin@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mhallin/swim-rs"

[lib]
name = "swim"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "swimmer"

[dependencies]
docopt = "*"
rustc-serialize = "*"
uuid = "*"
time = "*"
rand = "*"
mio = "*"
